# Quark

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  build.py  compile_shaders.py  quark.py  todo.txt  vcpkg.json  why_quark.txt
common/: CMakeLists.txt  api.hpp  common.cpp  common.hpp  main.cpp  mod.hpp
defaults/default_plugin/: README.md
engine/: animation.cpp  animation.hpp  executor.cpp  executor.hpp  input.cpp  input.hpp  quark.cpp  quark.hpp  quark_assets.hpp  quark_deps.hpp  quark_ecs.cpp  quark_ecs.hpp  quark_game.hpp  quark_internal.hpp  quark_math.hpp  quark_physics.hpp  quark_reflect.hpp  quark_renderer.cpp  quark_renderer.hpp  quark_types.cpp  quark_types.hpp  quark_utils.hpp  render.cpp  render.hpp  states.hpp
engine/shaders/: color.shader.glsl  depth_view.vert  lit_shadow.shader.glsl
game/: main.cpp
idler/: _build.cmake  idler.cpp  lib.cpp  main.cpp  mod.cpp
mods/: CMakeLists.txt
notes/: README.md  coordinate_system.txt  ecsapi.txt  engine.wiki  idk.txt  more_thoughts.txt  plugins.md  quark_how_to_ideas.txt  renderchanges.txt  todo.txt  why_quark.txt
other_plugins/ecs_particles/: README.md
other_plugins/performance_test/: performance_test.cpp  performance_test.hpp
other_plugins/rendering_basics/: rendering_basics.cpp
other_plugins/sound_basics/: api.hpp  mod_main.cpp  sound_basics.cpp  sound_basics.hpp
other_plugins/wfc/: README.md
plugins/: CMakeLists.txt  README.md
plugins/common/common/: CMakeLists.txt  api.hpp  common.cpp  common.hpp
plugins/common/src/: CMakeLists.txt  api.hpp  common.cpp  main.cpp
plugins/proto0/: README.md
plugins/proto0/proto0/: CMakeLists.txt  api.hpp  mod_main.cpp  proto0.cpp  proto0.hpp
plugins_old/idler/: CMakeLists.txt  api.hpp  idler.cpp  idler.hpp  mod.hpp
plugins_old/ref/: PlayerManager.cpp
plugins_old/testbed/: _build.cmake  binary_heap.hpp
proto/: memcpy_test.cpp  tasks.cpp  threadpool.hpp
quark/: CMakeLists.txt  entities.hpp  entity.hpp  executor.cpp  executor.hpp  ext.cpp  ext.hpp  input.cpp  input.hpp  module.hpp  quark.cpp  quark.hpp  quark_assets.cpp  quark_deps.hpp  quark_ecs.cpp  quark_game.hpp  quark_math.cpp  quark_platform.hpp  quark_reflect.hpp  quark_utils.hpp  render.cpp  render.hpp  state.hpp
quark 0.2/: core.hpp  engine.hpp  extension.hpp  platform.hpp
quark 0.2/core/: qmath.cpp  qmath.hpp  utility.hpp
quark 0.2/engine/: asset.hpp  component.hpp  entity.hpp  render.cpp  state.hpp
quark 0.2/extension/: animate.cpp  input.hpp  nice_colors.hpp
quark 0.2/platform/: allocator.hpp
quark/core/: CMakeLists.txt  qmath.cpp  qmath.hpp  utility.hpp
quark/engine/: asset.hpp  component.hpp  effect.cpp  effect.hpp  entity.hpp  global.cpp  global.hpp  input.cpp  input.hpp  module.hpp  par_tools.hpp  reflect.hpp  registry.hpp  render.cpp  render.hpp  state.hpp  str.hpp  system.hpp
quark/extension/: module.hpp
quark/loader/: main.cpp
quark/physics3d/: physics3d.hpp
quark/platform/: allocator.hpp  module.hpp  shared.hpp  threadpool.cpp  threadpool.hpp  window.hpp
quark/quark/: module.hpp
quark/quark/quark_engine/: CMakeLists.txt  actions.cpp  api.hpp  arenas.cpp  asset.cpp  assets.cpp  audio.cpp  component.cpp  component.hpp  context.cpp  context.hpp  ecs.cpp  ecs.hpp  effect.cpp  effect.hpp  entity.cpp  global.cpp  graphics.cpp  jobs.cpp  materials.cpp  mod_api.hpp  module.hpp  par_tools.cpp  par_tools.hpp  quark_engine.cpp  quark_engine.hpp  reflect.cpp  reflection.hpp  registry.cpp  render.cpp  render.hpp  renderer.cpp  snapshots.cpp  state.cpp  str.cpp  str.hpp  system.cpp  time.cpp  ui.cpp
quark/quark/quark_engine/inlines/: arenas.hpp  assets.hpp  cameras.hpp  ecs.hpp  graphics.hpp  materials.hpp
quark/quark/quark_engine/internal/: assets.hpp  cameras.hpp  ecs.hpp  material_defines.hpp  materials_api.hpp  resources.hpp
quark/quark/quark_engine/macros/: ecs.hpp  material_defines.hpp  resources.hpp
quark/quark/quark_engine/shaders/: color.shader.glsl  depth_only.vert  lit_color.shader.glsl  texture.shader.glsl  ui.shader.glsl
quark/quark/quark_engine/shaders/include/: default.glsl
quark/quark/quark_engine/shaders/push_constant/: custom.glsl  extend.glsl
quark/quark/quark_engine/shaders/shader_type/: default.frag  default.vert  simple.vert
quark/quark/quark_engine/shaders/world_data/: default.glsl  simple.glsl
quark/shaders/: color.frag.spv  color.vert.spv  depth_only.vert.spv  depth_view.vert.spv  lit_shadow.frag.spv  lit_shadow.vert.spv
quark/src/: CMakeLists.txt  module.hpp
quark3/: core.hpp  engine.hpp  lib.hpp  loader.cpp  platform.hpp
quark3/core/: qmath.cpp  qmath.hpp  utility.hpp
quark3/engine/: api.hpp  asset.cpp  asset.hpp  component.cpp  component.hpp  effect.cpp  effect.hpp  entity.cpp  entity.hpp  global.cpp  global.hpp  input.cpp  input.hpp  reflect.cpp  reflect.hpp  registry.cpp  registry.hpp  render.cpp  render.hpp  state.cpp  state.hpp  system.cpp  system.hpp
quark3/platform/: allocator.cpp  allocator.hpp  api.hpp  shared.cpp  shared.hpp  window.cpp  window.hpp
scripts/: compile_shaders.py
shader_compiler/: shader_compiler.py  test_0.ext.vert  test_0.vert  test_0.vert.spv  test_1.vert
shader_compiler/include/: include.vert
sim/: _build.cmake  main.cpp
src/: quark.cpp  quark.hpp  quark_allocators.hpp  quark_asset_manager.hpp  quark_assets.hpp  quark_assets_impl.hpp  quark_binds.hpp  quark_colors.hpp  quark_consts.hpp  quark_deps.hpp  quark_ecs.cpp  quark_ecs.hpp  quark_ecs_impl.hpp  quark_game.hpp  quark_helpers.hpp  quark_internal.hpp  quark_math.cpp  quark_math.hpp  quark_physics.cpp  quark_physics.hpp  quark_platform.cpp  quark_platform.hpp  quark_reflect.hpp  quark_render.cpp  quark_renderer.cpp  quark_renderer.hpp  quark_types.cpp  quark_types.hpp  quark_utils.hpp
src/member_function_pointer_testing/: main.cpp
src/quark2headers/: quark2._hpp  quark2.cpp  quark2.hpp  quark2_alloc.hpp  quark2_assets.hpp  quark2_assets_impl.hpp  quark2_deps.hpp  (+16 more)
test/: main.cpp
testbed/: _build.cmake  bitset.hpp  main.cpp
wiki/: engine.wiki  keywords.txt  why_quark.txt
(+115 files in other folders)
